--- a/main.css
+++ b/main.css
@@ -56,7 +56,7 @@ input, button {
 	padding: 1rem;
 	border-radius: 1rem;
 	margin-right: 1rem;
-	color: var(--darkest);
+	color: var(--light);
 	font-size: 1.25rem;
 }
 
